# cppied_ls2

./: CMakeLists.txt  LICENSE  README.md  cppied_algorithm.cpp  cppied_algorithm.hpp
data/config/s128128_ir20_lrc083/: cppied_problem.txt
data/config/s128128_ir3_lrc083/: cppied_problem.txt  cppied_solution.txt
data/config/s128128_is20_lrc087/: cppied_pod.txt
data/config/s128128_is20_lrc187/: cppied_pod.txt  cppied_problem.txt
data/config/s128128_is3_lrc183/: cppied_problem.txt
data/config/s3232_ir20_lrc183/: cppied_pod.txt  cppied_problem.txt
data/config/s3232_ir3_lrc083/: cppied_pod.txt
data/config/s3232_ir3_lrc087/: cppied_problem.txt
data/config/s3232_is20_lrc183/: cppied_problem.txt
data/config/s3232_is20_lrc187/: cppied_solution.txt
data/config/s3232_is3_lrc083/: cppied_problem.txt
data/test/s128128_ir0_lrc085/: cppied_problem.txt
data/test/s128128_ir0_lrc155/: cppied_problem.txt
data/test/s128128_ir1_lrc153/: cppied_problem.txt
data/test/s128128_ir1_lrc185/: cppied_problem.txt
data/test/s128128_ir2_lrc033/: cppied_problem.txt
data/test/s128128_ir2_lrc085/: cppied_problem.txt
data/test/s128128_is0_lrc033/: cppied_problem.txt
data/test/s128128_is0_lrc185/: cppied_problem.txt
data/test/s128128_is1_lrc133/: cppied_problem.txt
data/test/s128128_is1_lrc185/: cppied_problem.txt
data/test/s128128_is2_lrc081/: cppied_problem.txt
initialization_algorithms/: dp_sweeper.cpp  dp_sweeper.hpp
local_search_algorithms/: local_search.hpp  ls2.cpp  ls2.hpp
main/: initialization_main.cpp  local_search_main.cpp
utils/: utils.hpp
(+36 files in other folders)
